--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,4 @@ AUTH_DISCORD_SECRET=""
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5432/fast-ec"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5435/postgres"
