--- a/biome.jsonc
+++ b/biome.jsonc
@@ -11,6 +11,7 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
+			"correctness": { "noUnusedImports": "error" },
 			"nursery": {
 				"useSortedClasses": {
 					"level": "warn",
