--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^2.7.2",
+		"@hookform/resolvers": "^5.0.1",
 		"@prisma/client": "^6.5.0",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tanstack/react-query": "^5.69.0",
@@ -30,9 +31,10 @@
 		"next-auth": "5.0.0-beta.25",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.56.4",
 		"server-only": "^0.0.1",
 		"superjson": "^2.2.1",
-		"zod": "^3.24.2"
+		"zod": "^3.25.42"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
