--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.25.42"
