--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "clsx": "^2.1.1",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
@@ -39,6 +40,7 @@
     "react-icons": "^5.5.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.25.42"
   },
   "devDependencies": {
