chore: markdownのAI向け除外ルール追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,8 @@
     "no-inline-html": false,
     "no-alt-text": false,
     "blanks-around-headings": false,
-    "blanks-around-lists": false
+    "blanks-around-lists": false,
+    "blanks-around-fences": false
   },
 
   // 以下CloudFormation用に要追加設定
